# libidl

./: .gitignore  CMakeLists.txt  LICENSE  README.md
dev/docs/: pp.md
include/idl/: type.h
include/idl/priv/: tools.h
src/: idl.l  idl.y  main.c  parser.c  parser.h  tools.c  tools.h  yy_decl.h
src/pp/: pp.l  pp.y
